mais ajustes de conflito

--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -153,7 +153,9 @@ VITOR RAMOS GOMES DA SILVA: 20160154415\\
 
 \vspace{4cm}
 
+\begin{adjustwidth}{7.5cm}{0cm}
 
+{\normalsize
 Quarto Relatório apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
 avaliação da 2º unidade do semestre 2017.1 do 8º período
@@ -162,9 +164,9 @@ Universidade Federal do Rio Grande do Norte, sob
 orientação do {\bf Prof. Fábio Meneghetti Ugulino de
 Araújo} e {\bf Prof. Lucas Costa Pereira Cavalcante.}
 
+}
 
-
-%\end{adjustwidth}
+\end{adjustwidth}
 
 \vspace{2cm}
 
@@ -235,24 +237,11 @@ Lucas Costa Pereira Cavalcante.
 
 \begin{figure}[H]
 \centering
-<<<<<<< HEAD
-\includegraphics[width=10cm]{ImagensLab4/simulator.png}
-=======
 \includegraphics[width=11cm]{ImagensLab4/simulator.png}
->>>>>>> e036813f4b138ba545be2d5d925bbacb5f3c8a27
 \caption{R2D2E - Tank Simulator}
 \label{r2d2e}
 \end{figure}
 
-<<<<<<< HEAD
-\hspace{4ex}Pretende-se controlar o nível de água de ambos os tanques da planta, para isso, foi implementado os controladores Proporcional (P), Proporcional Integrativo (PI), Proporcional Derivativo (PD), Proporcional Integrativo Derivativo (PID) e Proporcional Integrativo Derivativo em controle de ação baseado no sinal do processo (PI-D). Quem irá escolher qual controle será usado é o usuário, através da interface do programa desenvolvido, como mostrado na figura  \ref{interface4}:
-
-\begin{figure}[H]
-\centering
-\includegraphics[width=13cm]{ImagensLab4/interface-versao4.png}
-\caption{Interface gráfica}
-\label{interface4}
-=======
 \hspace{4ex}Pretende-se controlar o nível de água de ambos os tanques da planta, para isso, foi implementado os controladores Proporcional (P), Proporcional Integrativo (PI), Proporcional Derivativo (PD), Proporcional Integrativo Derivativo (PID) e Proporcional Integrativo Derivativo em controle de ação baseado no sinal do processo (PI-D). Quem irá escolher qual controle será usado é o usuário, através da interface do programa desenvolvido, como mostrado na figura \ref{interface}:
 
 \begin{figure}[H]
@@ -260,7 +249,6 @@ Lucas Costa Pereira Cavalcante.
 \includegraphics[width=11cm]{ImagensLab4/interface-versao4.png}
 \caption{Interface do software de controle}
 \label{interface}
->>>>>>> e036813f4b138ba545be2d5d925bbacb5f3c8a27
 \end{figure}
 
 \hspace{4ex}Além dessas opções, o usuário também deve escolher os ganhos dos controladores Kp, Ki e ou Kd, ou $\tau_i$ e $\tau_d$, os quais são necessários para o controlador, como também, o  sinal de referência a ser enviado, o offset, a análise da resposta do sistema para o tempo de subida (t$_r$), por exemplo, de 5\% à 95\%, e o tempo de acomodação (t$_s$), para as faixas de 2\%, 5\% e 10\% do degrau. Ademais, é possível saber os valores do  t$_r$, t$_s$, tempo de pico (t$_p$) e o sobressinal (Mp) do sistema de segunda ordem.
@@ -428,7 +416,6 @@ Por fim o teste feito com o controlador PD. Foi usado uma constante $K_D$ baixa 
 
 %%%%%%%% REFERÊNCIAS %%%%%%%%%%%%%%%%%
 
-<<<<<<< HEAD
 \thispagestyle{empty}
 \section{BIBLIOGRAFIA}
 
@@ -438,9 +425,7 @@ Fundamentals of cascade control | Control Engineering. Disponível em: <http://w
 
 
 %Referências bibliogáficas (geradas automaticamente)
-=======
-% Referências bibliogáficas (geradas automaticamente)
->>>>>>> e036813f4b138ba545be2d5d925bbacb5f3c8a27
+
 %\addcontentsline{toc}{chapter}{Referências bibliográficas}
 %\bibliography{bib/bibliografia}
 
