--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -232,7 +232,7 @@ Lucas Costa Pereira Cavalcante.
 
 \section{INTRODUÇÃO}
 
-\begin{flushleft}
+%\begin{flushleft}
 \hspace{4ex}A prática de laboratório 04 tem como objetivo introduzir um sistema de controle em cascata na planta \textit{Quanser}, sendo a figura \ref{r2d2e} o simulador da planta:
 
 \begin{figure}[H]
@@ -277,7 +277,7 @@ Lucas Costa Pereira Cavalcante.
 
 \hspace{4ex}No relatório é apresentado a metodologia utilizada nessa experiência, os resultados obtidos através de testes e as conclusões a partir da comparação do comportamento do sistema com uma e com duas malhas.
 
-\end{flushleft}
+%\end{flushleft}
 
 \newpage
 
