--- a/MODELO RELATORIO/MODELO - CONTROLE.tex
+++ b/MODELO RELATORIO/MODELO - CONTROLE.tex
@@ -98,8 +98,8 @@ CURSO DE ENGENHARIA DE COMPUTAÇÃO
 
 \vspace{3.6cm}
 
-{\bf{\large RELATÓRIO DA 4ª EXPERIÊNCIA\\
-CONTROLE DE SISTEMAS DINÂMICOS: CONTROLE EM CASCATA\\
+{\bf{\large RELATÓRIO DA 5ª EXPERIÊNCIA\\
+CONTROLE NO ESPAÇO DE ESTADOS: OBSERVADORES DE ESTADO\\
 }}
 \vspace{1.5cm}
 {\large TURMA: 01 A\\
@@ -149,16 +149,16 @@ VITOR RAMOS GOMES DA SILVA: 20160154415\\
 \end{center}
 \vspace{3cm}
 
-{\bf{\large {\centering CONTROLE DE SISTEMAS DINÂMICOS: CONTROLE EM CASCATA\\}}}
+{\bf{\large {\centering CONTROLE NO ESPAÇO DE ESTADOS: OBSERVADORES DE ESTADO\\}}}
 
 \vspace{4cm}
 
 \begin{adjustwidth}{7.5cm}{0cm}
 
 {\normalsize
-Quarto Relatório apresentado à disciplina de
+Quinto relatório apresentado à disciplina de
 Laboratório de Sistemas de Controle, correspondente à
-avaliação da 2º unidade do semestre 2017.1 do 8º período
+avaliação da 3º unidade do semestre 2017.1 do 8º período
 do curso de Engenharia de Computação da
 Universidade Federal do Rio Grande do Norte, sob
 orientação do {\bf Prof. Fábio Meneghetti Ugulino de
